@@ -143,6 +143,8 @@ dnl  Libtool
 dnl AC_DISABLE_SHARED
 AC_PROG_LIBTOOL
 
+AC_SYS_LARGEFILE
+
 
 AC_PROG_LN_S
 
