@@ -20,7 +20,6 @@ libpbs_la_SOURCES = ../Libdis/dis.c ../Libdis/discui_.c ../Libdis/discul_.c \
 		    ../Libdis/diswl_.c ../Libdis/diswsi.c ../Libdis/diswsl.c \
 		    ../Libdis/diswui_.c ../Libdis/diswui.c \
 		    ../Libdis/diswul.c ../Libifl/advise.c \
-		    ../Libifl/atexit.c \
 		    ../Libifl/dec_attrl.c ../Libifl/dec_attropl.c \
 		    ../Libifl/dec_Authen.c ../Libifl/dec_CpyFil.c \
 		    ../Libifl/dec_JobCred.c ../Libifl/dec_JobFile.c \
